# ChalKak

./: .SRCINFO  .gitignore  AGENTS.md  Cargo.toml  PKGBUILD  README.ko.md  README.md
.claude/skills/chalkak-ocr-models-release/: SKILL.md
.claude/skills/chalkak-release/: SKILL.md
.codex/skills/chalkak-ocr-models-release/: SKILL.md
.codex/skills/chalkak-release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-fast.yml  clippy.yml  codeql.yml  dependency-review.yml  release-binary.yml  release-verify.yml  security-audit.yml
.gitkkal/: config.json
aur/chalkak-bin/: .SRCINFO  PKGBUILD
aur/chalkak-ocr-models/: .SRCINFO  PKGBUILD
docs/: USER_GUIDE.ko.md  USER_GUIDE.md
resources/: chalkak.gresource.xml
src/: geometry.rs  lib.rs  notification.rs
src/app/: actions.rs  bootstrap.rs  editor_history.rs  editor_popup.rs  editor_runtime.rs  editor_text_runtime.rs  hypr.rs  input_bridge.rs  launchpad.rs  launchpad_actions.rs  layout.rs  mod.rs  ocr_support.rs  preview_runtime.rs  runtime_css.rs  window_state.rs  worker.rs
src/app/editor_popup/: geometry.rs  image_processing.rs  interaction.rs  output.rs  (+1 more)
src/capture/: hyprland.rs  mod.rs
src/clipboard/: mod.rs
src/config/: mod.rs
src/editor/: mod.rs
src/error/: mod.rs
src/input/: mod.rs  shortcut.rs
src/ocr/: mod.rs
src/preview/: actions.rs  mod.rs  shell.rs
src/state/: error.rs  machine.rs  mod.rs
src/storage/: mod.rs
src/theme/: mod.rs
src/ui/: mod.rs  style.rs  widgets.rs
(+20 files in other folders)
