[package]
name = "chalkak"
version = "0.4.1"
edition = "2021"
description = "Hyprland screenshot preview and editor utility"
repository = "https://github.com/BitYoungjae/ChalKak"
homepage = "https://github.com/BitYoungjae/ChalKak"
license = "MIT OR Apache-2.0"
authors = ["BitYoungjae <bityoungjae@gmail.com>"]

[dependencies]
anyhow = "1.0"
gtk4 = "0.10.3"
image = "0.25.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ocr-rs = { git = "https://github.com/BitYoungjae/rust-paddle-ocr.git", branch = "next" }
notify-rust = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
glib-build-tools = "0.21"
